fix: se corrige url de conexión swagger en prod